# ZhiYiQuant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  TRADEMARKS.md  docker-compose.yml  package-lock.json
.github/workflows/: basic-ci.yml  build-tauri.yml  publish-tauri.yml
backend_api_python/: .gitignore  Dockerfile  README.md  env.example  gunicorn_config.py  requirements-windows.txt  requirements.txt  run.py  sidecar_main.py  start.sh
backend_api_python/app/: __init__.py
backend_api_python/migrations/: init.sql
backend_api_python/scripts/: backfill_zero_trades.py  build_sidecar.py  generate_softcopyright_source_excerpt.py  (+3 more)
docs/: CHANGELOG.md  CROSS_SECTIONAL_STRATEGY_GUIDE_CN.md  CROSS_SECTIONAL_STRATEGY_GUIDE_EN.md  IBKR_TRADING_GUIDE_CN.md  IBKR_TRADING_GUIDE_EN.md  MT5_TRADING_GUIDE_CN.md  MT5_TRADING_GUIDE_EN.md  NOTIFICATION_EMAIL_CONFIG_CH.md  NOTIFICATION_EMAIL_CONFIG_EN.md  NOTIFICATION_SMS_CONFIG_CH.md  NOTIFICATION_SMS_CONFIG_EN.md  NOTIFICATION_TELEGRAM_CONFIG_CH.md  NOTIFICATION_TELEGRAM_CONFIG_EN.md  OAUTH_CONFIG_CN.md  OAUTH_CONFIG_EN.md  PPT策划.md  STRATEGY_DEV_GUIDE.md  STRATEGY_DEV_GUIDE_CN.md  V2_DESKTOP_ECOSYSTEM_PLAN.md  multi-user-setup.md  项目说明.md
quantdinger_vue/: Dockerfile  README.md  build-docker.ps1  build-docker.sh  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
zhiyiquant_vue/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
(+169 files in other folders)
